<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:text="@string/titre"
            android:textSize="36sp" />

        <!-- Login Label -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_edtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_labelLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_edtPasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_labelPasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passe"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/login_cbRemember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btnOK"
            android:enabled="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/ok" />

    </LinearLayout>
</ScrollView>